test/valid-not-implemented/58166_safeIndexCheck/safeIndexCheck.agu
-- Author: 58166, Manuel Campos

let safeIndexCheck (a, n) : (Int[], Int) -> Bool =
    n >= 0 && n < length(a)

let main(_) : Unit -> Unit =
    print(safeIndexCheck(new Int [4 | 1],7))