test/invalid-semantic/56269_wrong_function_call/wrong_function_call.agu
-- Author: 56269, Frederico Prazeres

-- Semantic Error: wrongCall only has one argument

let wrongCall (n) : Int -> Int =
  let a : Int[][] = new Int[] [n | new Int [n | 0]] ;
  let j : Int = length(a) ;
  j

let _ : Unit -> Int =
    wrongCall(1,2)